[tool.poetry]
name = "python-pae"
version = "0.1.0"
description = ""
authors = ["Matthias Valvekens <matthias@mvalvekens.be>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^6.1.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
    omit = ["*docs*", "*test*", "*venv*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover",
                 "pragma: nocover",
                 "raise AssertionError",
                 "raise NotImplementedError"]
precision = 2
